--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <style>
     @media all and (min-width: 350px) and (max-width: 500px) {
         main>section{
-            width: 70%;
-            height: 15px;
+            width: 80%;
+            height: 10px;
         }
         main>aside{
             width: 50%;
@@ -31,6 +31,10 @@
             <div></div>
             <div></div>
             <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+
     </section>
     <aside>
         <button>Start</button>
