--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <style>
     @media all and (min-width: 350px) and (max-width: 500px) {
         main>section{
+            height: 40%;
+        }
+        main>section>section{
             width: 80%;
             height: 10px;
         }
         main>aside{
             width: 50%;
-            padding-top: 70%;
         }
 
     }
@@ -24,6 +26,7 @@
 <body>
 <main>
     <section>
+        <section>
             <div></div>
             <div></div>
             <div></div>
@@ -35,7 +38,9 @@
             <div></div>
             <div></div>
 
+        </section>
     </section>
+
     <aside>
         <button>Start</button>
         <button>Pause</button>
